tests/baselines/reference/generatorTypeCheck39.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck39.ts(5,16): error TS1163: A 'yield' expression is only allowed in a generator body.
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck39.ts(7,13): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck39.ts (2 errors) ====
    function decorator(x: any) {
        return y => { };
    }
    function* g() {
        @decorator(yield 0)
                   ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
        class C {
            x = yield 0;
                ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
        }
    }